fix loading bacground

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Happy Birthday</title>
     <link rel="stylesheet" href="style/index.css" />
   </head>
+
   <body>
     <div class="top-bg"></div>
     <div class="bottom-bg"></div>
@@ -22,6 +23,7 @@
         <div class="loader__sq"></div>
       </div>
     </div>
+
     <footer class="footer">
       <p>
         Made with ❤️ By Ayocode.id <br />
@@ -29,9 +31,9 @@
       </p>
     </footer>
     <script>
-      setTimeout(function () {
-        window.location.replace("welcome.html");
-      }, 7000);
+      // setTimeout(function () {
+      //   window.location.replace('welcome.html');
+      // }, 7000);
     </script>
   </body>
 </html>
