--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       </p>
     </footer>
     <script>
-      // setTimeout(function () {
-      //   window.location.replace('welcome.html');
-      // }, 7000);
+      setTimeout(function () {
+        window.location.replace('welcome.html');
+      }, 5000);
     </script>
   </body>
 </html>
