add main.html | main, footer section

--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=h1, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- external style -->
     <link rel="stylesheet" href="./style/main.css" />
@@ -89,8 +89,23 @@
           <img class="photo" src="./assets/photo-7.png" alt="photo 7" />
         </figure>
       </section>
+      <img class="icon-flag-2" src="./assets/icon_flag.svg" alt="flag" />
+
+      <section class="message">
+        <p>
+          “It will be a gift for me if you can present at My Birthday Party, I
+          am looking forward to your presence.” <br /><br /><br />With
+          <img src="./assets/icon_love.svg" alt="love" /><br />- Frinz Arley -
+        </p>
+      </section>
     </main>
-    <footer></footer>
+
+    <footer class="footer">
+      <p>
+        Made with ❤️ By Ayocode.id <br />
+        | All Right Reserved.
+      </p>
+    </footer>
 
     <script>
       const photos = document.querySelectorAll('.photos figure');
